V3.5 beta - Unterstützung für MC2 - Neues Modul LDG4x für die Decoder LD-G-41, LD-G-42, LD-W-42, LD-G-42.2, LD-W-42.2, LD-G-43, LD-G-44